[package]
name = "game-of-life"
version = "0.1.0"
authors = ["jafaghpo <jafaghpo@student.42.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.9"
wasm-bindgen = "0.2.45"
js-sys = "0.3"

wee_alloc = { version = "0.4.4", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
